# OpenDeck

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TESTING_GUIDE.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  PHASE1_IMPLEMENTATION.md  PROFILE_PICTURES.md  QUICKSTART.md  README.md  TOPIC_API_QUICK_REFERENCE.md  TOPIC_SYSTEM_IMPLEMENTATION_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251017_1900_initial_schema.py  20251018_1200_add_topics_system.py  20251025_1500_add_document_indexes.py  20251029_1200_add_fcm_and_notifications.py  20251104_1900_add_spaced_repetition.py  20251104_2000_add_deck_comments.py  20251110_2300_add_profile_picture.py  20251111_1830_add_card_reports_table.py  20251111_1900_add_feedback_table.py  20251112_1000_add_google_oauth_fields.py  20251112_2323_add_unique_constraint_to_card_reports_.py  20251112_2353_add_unique_constraint_on_oauth_provider_.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  cards.py  comments.py  decks.py  dependencies.py  documents.py  fcm_tokens.py  feedback.py  health.py  notifications.py  reports.py  study_sessions.py  topics.py  users.py
backend/app/core/: firebase.py  interfaces.py  models.py
backend/app/db/: base.py  models.py  postgres_repo.py
backend/app/schemas/: auth.py  card.py  card_report.py  card_review.py  comment.py  deck.py  (+9 more)
backend/scripts/: debug_ollama_response.py  load_test_data.py  test_ollama.py
backend/tests/: conftest.py
(+160 files in other folders)
